@@ -1,5 +1,11 @@
 2008-10-06  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* config/rs6000/rs6000-protos.h (rs6000_find_base_term): Declare.
+	* config/rs6000/rs6000.h (FIND_BASE_TERM): New macro.
+	* config/rs6000/rs6000.c (rs6000_find_base_term): New function.
+
+2008-10-06  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* config/darwin-protos.h (machopic_function_base_name): Delete.
 	(machopic_function_base_sym): Likewise.
 	(machopic_gen_offset): Declare.
